# rudvent-of-code

./: .gitignore  Cargo.toml  README.md
2021/: Cargo.toml
2021/src/: utils.rs
2021/src/day1/: a.rs
2021/src/day3/: sol.rs
benches/: day6.rs
data/: day10_1_answer.html  day11_2_answer.html  day13_1_answer.html  day16_1_answer.html  day2_2_answer.html  day3_1_answer.html  day3_2_answer.html  day4_1_answer_low.html  day5_2_answer.html  day7_2_answer.html  day9_1_answer.html
data/html/: day12_1.html  day12_2.html  day13_2.html  day16_1.html  day2_1.html  day3_1.html  day4_2.html  day5_2.html  day7_2.html
day6-experiment/: Cargo.toml
examples/: day4_1.html
frontend/: package-lock.json  package.json
frontend/src/routes/: +page.svelte  page.ts
my-solutions/: Cargo.toml
my-solutions/data/: day10_1.html  day10_1_answer.html  day10_2.html  day10_2_answer.html  day11_1.html  day11_1_answer.html  day11_2_answer.html  day12_1.html  day12_1_answer.html  day13_1.html  day13_1_answer.html  day13_2.html  day13_2_answer.html  day14_1.html  day14_1_answer.html  day14_2.html  day15_1_answer.html  day16_1.html  day16_1_answer.html  day16_2.html  day18_1.html  day18_1_answer.html  day18_2.html  day18_input_1.txt  day19_1.html  day1_1.html  day1_1_answer.html  day1_2.html  day1_2_answer.html  day21_1.html  day21_input_1.txt  day2_1.html  day2_1_answer.html  day2_2.html  day3_1.html  day3_1_answer.html  day3_2.html  day3_2_answer.html  day3_example_1.txt  day3_example_2.txt  (+20 more)
my-solutions/src/: main.rs  utils.rs
my-solutions/src/days/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_18.rs  day_19.rs  day_2.rs  day_21.rs  day_23.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs
my-solutions/test_data/: day7_2_answer.html
previous-years/2022/data/: day11_1_answer.html  day13_2_answer.html  day5_1_answer.html  day6_2_answer.html  day8_1_answer.html  day9_2_answer.html
previous-years/2022/src/: day10.rs  day15.rs  day16.rs  day7.rs  main.rs  solution.rs  stack_analysis.rs
previous-years/2023/data/: day10_1.html  day10_1_answer.html  day10_2.html  day11_1.html  day11_2.html  day12_1_answer.html  day13_1.html  day14_1.html  day14_1_answer.html  day14_2_answer.html  day15_1.html  day1_1_answer.html  day1_2_answer.html  day2_1_answer.html  day2_2_answer.html  day3_1.html  (+12 more)
r2022/: Cargo.toml  gripes.txt
r2022/data/: day12_1_answer.html  day14_1_answer.html  day14_2_answer.html  day15_1_answer.html  day15_2_answer.html  day16_1_answer.html  day1_1.html  day2_1_answer.html  day4_1_answer.html  day4_2_answer.html  day6_1_answer.html  day7_1_answer.html  day8_2_answer.html
r2022/data/html/: day10_1.html  day10_2.html  day11_1.html  day11_2.html  day15_1.html  day15_2.html  day16_2.html  day2_1_old.html  day3_1.html  day5_1.html  day7_1.html  day8_1.html  day8_2.html  day9_1.html  day9_2.html
r2022/src/: cli.rs  day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day8.rs  day_template.rs  main.rs  solution.rs  stack_analysis.rs  types.rs  utils.rs
rudvent/: Cargo.toml  database.sqlite
rudvent-lib/: Cargo.toml  README.md  example_command.sh
rudvent-lib/examples/populated/: .env  Cargo.toml
rudvent-lib/examples/populated/src/: main.rs
rudvent-lib/examples/populated/src/days/: day_1.rs  mod.rs
rudvent-lib/examples/start_here/: Cargo.toml
rudvent-lib/examples/start_here/src/: main.rs
rudvent-lib/src/: advent_interactions.rs  cli.rs  day_data.rs  lib.rs  printer.rs  runner.rs  solution.rs  templates.rs  types.rs  utils.rs
rudvent-lib/src/cli/: app.rs  app_builder.rs  new.rs  solve.rs
rudvent-lib/src/http/: models.rs
rudvent-lib/src/solution/: execution.rs
rudvent-lib/src/templates/: day_template.rs  mod_template.rs
rudvent-poem/: Cargo.toml
rudvent/migrations/: 20231127151852_solutions.down.sql  20231127151852_solutions.up.sql
rudvent/src/: db.rs  lib.rs
src/: cli.rs  day1.rs  day14.rs  day15.rs  day16.rs  day2.rs  day6.rs  day9.rs  day_template.rs  lib.rs  main.rs  solution.rs  stack_analysis.rs  utils.rs
src/day1/: a.rs
src/day1a/: sol.rs
src/day2/: sol.rs
src/day3/: sol.rs
src/day4/: example2.txt  mod.rs  sol.rs
src/day5/: sol.rs
src/day6/: sol.rs
src/day8/: sol.rs
(+23 files in other folders)
