[package]
name = "rudvent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-vec-deque = "0.1"
terminal-clipboard = "0.3"
array2d = "0.2"
clap = { version = "3.0.0-rc.8", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
flagset = "0.4"
chrono = "*"
fxhash = "*"
pprof = "*"
