[package]
name = "my-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rudvent-lib = { version = "0.1.0", path = "../rudvent-lib" }
tracing = "0.1.40"
log = "0.4.20"
array2d = "0.3.0"
rand = "0.8.5"
num-traits = "0.2.15"
clap = { version = "4.4.10", features = ["derive"] }
ibig = "0.3.6"

