[package]
name = "r2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached-path = "0.5.3"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["blocking"] }
scraper = "0.13.0"
