[package]
name = "r2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached-path = "0.5.3"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
get-size = { version = "0.1.1", features = ["derive"] }
html2text = "0.4.4"
humansize = "2.1.2"
log = "0.4.17"
num = { version = "0.4.0", features = ["num-bigint"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
scraper = "0.13.0"

[profile.release]
lto = 'fat'
debug = 1

#[[bin]]
#name = "main"
#path = "src/main.rs"
