[package]
name = "rudvent-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
sysinfo = { version = "0.29.11", default-features = false }
clap = { version = "4.4.10", features = [] }
clap-verbosity-flag = "2.1.0"
cached-path = { version = "0.6.1", features = ["color-eyre"] }
color-eyre = "0.6.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
humansize = "2.1.3"
chrono-humanize = "0.2.3"
tracing = "0.1.40"
