[package]
name = "rudvent"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.0"
tokio = "1.28.2"
tracing = "0.1.40"
rudvent-lib = { version = "0.1.0", path = "../rudvent-lib" }
utopia = "0.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["postgres", "sqlite", "runtime-tokio-rustls"] }
sea-orm = { version = "0.12.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "sqlx"] }
shuttle-shared-db = { version = "0.34.1", features = ["postgres"] }

[[bin]]
name = "shuttle"
path = "src/bin/shuttle.rs"
